--- a/endnote.bib
+++ b/endnote.bib
@@ -420,3 +420,21 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	langid = {english}
 }
 
+@article{kirby_bootes_2013,
+	title = {{BootES}: An R package for bootstrap confidence intervals on effect sizes},
+	volume = {45},
+	issn = {1554-3528},
+	url = {https://doi.org/10.3758/s13428-013-0330-5},
+	doi = {10.3758/s13428-013-0330-5},
+	shorttitle = {{BootES}},
+	abstract = {Bootstrap Effect Sizes ({bootES}; Gerlanc \& Kirby, 2012) is a free, open-source software package for R (R Development Core Team, 2012), which is a language and environment for statistical computing. {BootES} computes both unstandardized and standardized effect sizes (such as Cohen’s d, Hedges’s g, and Pearson’s r) and makes easily available for the first time the computation of their bootstrap confidence intervals ({CIs}). In this article, we illustrate how to use {bootES} to find effect sizes for contrasts in between-subjects, within-subjects, and mixed factorial designs and to find bootstrap {CIs} for correlations and differences between correlations. An appendix gives a brief introduction to R that will allow readers to use {bootES} without having prior knowledge of R.},
+	pages = {905--927},
+	number = {4},
+	journaltitle = {Behavior Research Methods},
+	shortjournal = {Behav Res},
+	author = {Kirby, Kris N. and Gerlanc, Daniel},
+	urldate = {2020-06-24},
+	date = {2013-12-01},
+	langid = {english},
+	file = {Springer Full Text PDF:/home/hcp4715/Zotero/storage/N3S8VCEQ/Kirby and Gerlanc - 2013 - BootES An R package for bootstrap confidence inte.pdf:application/pdf}
+}
